force-app/main/default/objects/CaseManagement__mdt/CaseManagement__mdt.object-meta.xml
<CustomObject>
    <description>Used in Case Life-cycle and to determining how queues should be assigned per OpCo if SLAs are breached</description>
    <label>Case Management</label>
    <pluralLabel>Case Management</pluralLabel>
</CustomObject>