force-app/main/default/objects/CaseManagement__mdt/fields/Max_Hours_Allowed_In_Status_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Max_Hours_Allowed_In_Status_On_Hold__c</fullName>
    <label>Max Hours Allowed In Status On Hold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>