force-app/main/default/objects/CaseManagement__mdt/fields/Max_Hours_Allowed_In_Status_Solved__c.field-meta.xml
<CustomField>
    <fullName>Max_Hours_Allowed_In_Status_Solved__c</fullName>
    <label>Max Hours Allowed In Status Solved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>