force-app/main/default/objects/CaseManagement__mdt/fields/MaximumAllowedDaysinStatus__c.field-meta.xml
<CustomField>
    <fullName>MaximumAllowedDaysinStatus__c</fullName>
    <inlineHelpText>The maximum amount of days that a case can be in a specific status for</inlineHelpText>
    <label>Maximum Allowed Days in Status</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>