force-app/main/default/objects/CaseManagement__mdt/fields/OperatingCompany__c.field-meta.xml
<CustomField>
    <fullName>OperatingCompany__c</fullName>
    <label>Operating Company</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Liber</fullName>
                <default>true</default>
                <label>Liber</label>
            </value>
            <value>
                <fullName>Noordhoff</fullName>
            </value>
            <value>
                <fullName>Plantyn</fullName>
            </value>
            <value>
                <fullName>Noordhoff Zorg</fullName>
            </value>
            <value>
                <fullName>Noordhoff Professional</fullName>
                <isActive>false</isActive>
                <label>Noordhoff Professional</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>