force-app/main/default/objects/CaseManagement__mdt/fields/Reminder_after_X_Hours_In_Status_Pending__c.field-meta.xml
<CustomField>
    <fullName>Reminder_after_X_Hours_In_Status_Pending__c</fullName>
    <label>Reminder after X Hours In Status Pending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>