force-app/main/default/objects/CaseManagement__mdt/fields/secondAutoResponseAfterXHrInNew__c.field-meta.xml
<CustomField>
    <fullName>secondAutoResponseAfterXHrInNew__c</fullName>
    <label>second auto-response after X hr in New</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>