force-app/main/default/objects/CaseManagement__mdt/fields/X1stLineQueueID__c.field-meta.xml
<CustomField>
    <fullName>X1stLineQueueID__c</fullName>
    <inlineHelpText>The queue ID for the first line level support</inlineHelpText>
    <label>1st Line Queue ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>