force-app/main/default/objects/CaseManagement__mdt/fields/X2ndLineQueueID__c.field-meta.xml
<CustomField>
    <fullName>X2ndLineQueueID__c</fullName>
    <inlineHelpText>The queue ID for the second line level support</inlineHelpText>
    <label>2nd Line Queue ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>