force-app/main/default/objects/CaseManagement__mdt/fields/X3rdLineQueueID__c.field-meta.xml
<CustomField>
    <fullName>X3rdLineQueueID__c</fullName>
    <inlineHelpText>The queue ID for the third line level support</inlineHelpText>
    <label>3rd Line Queue ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>